# QCLab

./: .gitignore  CHANGELOG.md  CONFIG_GUIDE.md  DEVELOPMENT_PLAN.md  QUICK_GUIDE.md  Single-Q-calibration.aux  Single-Q-calibration.out  pyproject.toml  qlisp_examples.py  qlisp_syntax_guide.md
home/: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml
home/cfg/: .gitignore  84V503_ST_LML_250429.json  84V503_ST_LML_250429_annotated.json  simple_config.json  simple_config_annotated.md
home/dev/: AlazarTechDigitizer.py  ChipQ_AWG.py  DG645.py  DP831.py  DSA875.py  FSL.py  Keysight_PXI.py  Keysight_PXI_AWG.py  Keysight_PXI_DAQ.py  LH_ADDA.py  LH_DA.py  LH_DC.py  LH_DC_net.py  LH_DDS_AD.py  LH_DDS_AD2.py  LH_DDS_ADDA.py  LH_DDS_AD_x86.py  LH_DDS_DA.py  LH_DDS_DAx86v2.py  LH_Trig.py  NS_DDS.py  NS_DDS_NEW.py  NS_DDS_Z.py  NS_DDS_old.py  NS_QSYNC.py  NS_QSYNCv2.py  NetworkAnalyzer.py  OPTIMIZATION_SUMMARY.md  PG_AD.py  PG_AWG.py  PG_Trig.py  PSG.py  QC_AD.py  QC_DA.py  QC_DC.py  RigolAWG.py  SinolinkPSG.py  TekAWG.py  TekAWG70000A.py  XGM_MDS24.py  (+17 more)
home/dev/common/: __init__.py  basedriver.py  quantity.py  tek_seq_builder.py  utils 2.py  utils.py  visadriver.py
home/dev/common/AlazarTechDigitizer/: AlazarApi.py  AlazarTechWrapper.py  __init__.py
home/dev/common/Ceyear/: __init__.py  ceyear_1652AM_driver.py
home/dev/common/DDS_LH/: __init__.py  说明.txt  (+18 more)
home/lib/: __init__.py
home/lib/arch/: __init__.py
home/lib/gates/: __init__.py  cr.py  cz_v4.py  qudit.py  std.py  u3.py  u3rcp.py
home/run/: __init__.py  driver.py  s21.py  s21_annotated.py  s21_test.py
(+70 files in other folders)
