[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "systemq"
version = "6.2.0"
authors = [
  { name="baqis", email="fengyl@baqis.ac.cn" },
]
description = "runtime requirements for systemq"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
  "blinker",
  "pyvisa",
  "pyvisa-py",
  "pyserial",
  "waveforms",
  "waveforms-math",
  "qlisp",
  "qlispc",
  "cryptography",
  "requests",
  "pandas",
  "sqlalchemy",
  "quarkstudio[full]",
  "portalocker",
  "ipywidgets",
  "ipympl"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Chinese (Simplified)",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
"homepage" = "https://quarkstudio.readthedocs.io/en/latest"

[tool.setuptools.packages.find]
where = ["."]
include=["dev", "dev.*", "lib", "lib.*"]